feat(auth): added user registration

--- a/packages/app-client/src/locales/ar.json
+++ b/packages/app-client/src/locales/ar.json
@@ -42,10 +42,10 @@
       "invalid-credentials": "البريد الإلكتروني أو كلمة المرور غير صحيحة.",
       "unknown": "حدث خطأ غير معروف. يرجى المحاولة مرة أخرى لاحقًا."
     },
-    "footer": [
-      "ليس لديك حساب؟",
-      "اتصل بمالك النسخة."
-    ]
+    "footer": {
+      "no-account": "ليس لديك حساب؟",
+      "register": "التسجيل"
+    }
   },
   "create": {
     "errors": {
