--- a/packages/app-client/src/locales/ru.json
+++ b/packages/app-client/src/locales/ru.json
@@ -40,10 +40,10 @@
       "invalid-credentials": "Неверный адрес электронной почты или пароль.",
       "unknown": "Неизвестная ошибка. Пожалуйста, повторите попытку позже."
     },
-    "footer": [
-      "Нет учётной записи?",
-      "Связаться с владельцем"
-    ]
+    "footer": {
+      "no-account": "Нет учётной записи?",
+      "register": "Зарегистрироваться"
+    }
   },
   "create": {
     "errors": {
